Converted all-caps to upper & lower : (styling to come later)

--- a/src/epub/text/the-undignified-melodrama-of-the-bone-of-contention.xhtml
+++ b/src/epub/text/the-undignified-melodrama-of-the-bone-of-contention.xhtml
@@ -324,11 +324,13 @@
 			<p>“Damn it all!” said Wimsey. “Look here, I’m jolly well going to read what’s on that post. If you won’t come, will you stand still?”</p>
 			<p>He dropped the bridle. The mare stood quietly, with hanging head. He left her and went forward, glancing back from time to time to see that she showed no disposition to bolt. She stood quietly enough, however, only shifting her feet uneasily.</p>
 			<p>Wimsey walked up to the post. It was a stout pillar of ancient oak, newly painted white. The inscription, too, had been recently blacked in. It read:</p>
-			<p>ON THIS SPOT</p>
+<blockquote>
+			<p>On This Spot</p>
 			<p>George Winter</p>
-			<p>WAS FOULLY MURTHERED IN DEFENSE OF HIS MASTER’S GOODS BY BLACK RALPH</p>
-			<p>OF HERRIOTTING WHO WAS AFTERWARD HANGED IN CHAINS ON THE PLACE OF HIS CRIME 9 NOVEMBER 1674</p>
-			<p>FEAR JUSTICE</p>
+			<p>Was Foully Murthered in Defense of His Master’s Goods by Black Ralph</p>
+			<p>Of Herriotting Who Was Afterward Hanged in Chains on the Place of His Crime 9 November 1674</p>
+			<p>Fear Justice</p>
+</blockquote>
 			<p>“And very nice, too,” said Wimsey. “Dead Man’s Post without a doubt. Polly Flinders seems to share the local feeling about the place. Well, Polly, if them’s your sentiments, I won’t do violence to them. But may I ask why, if you’re so sensitive about a mere post, you should swallow a death-coach and four headless horses with such hardened equanimity?”</p>
 			<p>The mare took the shoulder of his jacket gently between her lips and mumbled at it.</p>
 			<p>“Just so,” said Wimsey. “I perfectly understand. You would if you could, but you really can’t. But those horses, Polly⁠—did they bring with them no brimstone blast from the nethermost pit? Can it be that they really exuded nothing but an honest and familiar smell of stables?”</p>
