--- a/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
+++ b/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
@@ -95,14 +95,20 @@
 			<p>Lord Peter Wimsey,</p>
 			<p>110A Picadilly.</p>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i> vendor outside Piccadilly Tube Station arranged his placard with some care. It looked very well, he thought.</p>
-			<p>MAN WITH NO FACE IDENTIFIED</p>
+<blockquote>
+			<p>Man With No Face Identified</p>
+</blockquote>
 			<p>It was, in his opinion, considerably more striking than that displayed by a rival organ, which announced, unimaginatively:</p>
-			<p>BEACH MURDER VICTIM IDENTIFIED</p>
+<blockquote>
+			<p>Beach Murder Victim Identified</p>
+</blockquote>
 			<p>A youngish gentleman in a grey suit who emerged at that moment from the Criterion Bar appeared to think so too, for he exchanged a copper for the <i epub:type="se:name.publication.newspaper">Evening Views</i>, and at once plunged into its perusal with such concentrated interest that he bumped into a hurried man outside the station and had to apologise.</p>
 			<p>The <i epub:type="se:name.publication.newspaper">Evening Views</i>, grateful to murderer and victim alike for providing so useful a sensation in the dead days after the Bank Holiday, had torn <abbr>Messrs.</abbr> Negretti &amp; Zambra’s rocketing thermometrical statistics from the “banner” position which they had occupied in the lunch edition, and substituted:</p>
+<blockquote>
 			<p>“Faceless Victim of Beach Outrage Identified</p>
-			<p>MURDER OF PROMINENT PUBLICITY ARTIST</p>
-			<p>POLICE CLUES</p>
+			<p>Murder of Prominent Publicity Artist</p>
+			<p>Police Clues</p>
+</blockquote>
 			<p>“The body of a middle-aged man who was discovered, attired only in a bathing-costume and with his face horribly disfigured by some jagged instrument, on the beach at East Felpham last Monday morning, has been identified as that of <abbr>Mr.</abbr> Coreggio Plant, studio manager of <abbr>Messrs.</abbr> Crichton <abbr>Ltd.</abbr>, the well-known publicity experts of Holborn.</p>
 			<p>“<abbr>Mr.</abbr> Plant, who was forty-five years of age and a bachelor, was spending his annual holiday in making a motoring tour along the West Coast. He had no companion with him and had left no address for the forwarding of letters, so that, without the smart work of Detective-Inspector Winterbottom of the Westshire police, his disappearance might not in the ordinary way have been noticed until he became due to return to his place of business in three weeks time. The murderer had no doubt counted on this, and had removed the motorcar, containing the belongings of his victim, in the hope of covering up all traces of this dastardly outrage so as to gain time for escape.</p>
 			<p>“A rigorous search for the missing car, however, eventuated in its discovery in a garage at West Felpham, where it had been left for decarbonisation and repairs to the magneto. <abbr>Mr.</abbr> Spiller, the garage proprietor, himself saw the man who left the car, and* has furnished a description of him to the police. He is said to be a small, dark man of foreign appearance. The police hold a clue to his identity, and an arrest is confidently expected in the near future.</p>
