--- a/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
+++ b/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
@@ -14,8 +14,10 @@
 			<p>“Somewhat. Thank you. I can get through by the corridor?”</p>
 			<p>“But certainly. The <i xml:lang="fr">premières</i> are two coaches away, beyond the luggage-van.”</p>
 			<p>The young man rewarded his rescuer, and made his way forward, mopping his face. As he passed the piled-up luggage, something caught his eye, and he stopped to investigate. It was a suit-case, nearly new, of expensive-looking leather, labelled conspicuously:</p>
-			<p>LORD PETER WIMSEY,</p>
+<blockquote>
+			<p>Lord Peter Wimsey,</p>
 			<p>Hôtel Saumon d’Or, Verneuil-sur-Eure</p>
+</blockquote>
 			<p>and bore witness to its itinerary thus:</p>
 			<p>LONDON⁠—PARIS (Waterloo) (Gare <abbr>St.</abbr> Lazare) via Southampton-Havre</p>
 			<p>PARIS’⁠—VERNEUIL (Ch. de Fer de l’Ouest)</p>
