[Editorial] Modernize hyphenation and spelling

--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -25,14 +25,14 @@
 			<p>“Pardon me, my lord, a lady has called. She mentioned no appointment, so I considered it better to acquaint your lordship.”</p>
 			<p>“Excellent discretion,” said a voice. It had a slow, sarcastic intonation, which brought a painful flush to <abbr>Mrs.</abbr> Ruyslaender’s cheek. “I never make appointments. Do I know the lady?”</p>
 			<p>“No, my lord. But⁠—hem⁠—I know her by sight, my lord. It is <abbr>Mrs.</abbr> Ruyslaender.”</p>
-			<p>“Oh, the diamond merchant’s wife. Well, find out tactfully what it’s all about, and, unless it’s urgent, ask her to call to-morrow.”</p>
+			<p>“Oh, the diamond merchant’s wife. Well, find out tactfully what it’s all about, and, unless it’s urgent, ask her to call tomorrow.”</p>
 			<p>The valet’s next remark was inaudible, but the reply was:</p>
 			<p>“Don’t be coarse, Bunter.”</p>
 			<p>The valet returned.</p>
 			<p>“His lordship desires me to ask you, madam, in what way he can be of service to you.”</p>
 			<p>“Will you say to him that I have heard of him in connection with the Attenbury diamond case, and am anxious to ask his advice.”</p>
 			<p>“Certainly, madam. May I suggest that, as his lordship is greatly fatigued, he would be better able to assist you after he has slept.”</p>
-			<p>“If to-morrow would have done, I would not have thought of disturbing him to-night. Tell him, I am aware of the trouble I am giving⁠—”</p>
+			<p>“If tomorrow would have done, I would not have thought of disturbing him tonight. Tell him, I am aware of the trouble I am giving⁠—”</p>
 			<p>“Excuse me one moment, madam.”</p>
 			<p>This time the door shut properly. After a short interval Bunter returned to say, “His lordship will be with you immediately, madam,” and to place a decanter of wine and a box of Sobranies beside her.</p>
 			<p><abbr>Mrs.</abbr> Ruyslaender lit a cigarette, but had barely sampled its flavour when she was aware of a soft step beside her. Looking round, she perceived a young man, attired in a mauve dressing-gown of great splendour, from beneath the hem of which peeped coyly a pair of primrose silk pyjamas.</p>
@@ -46,7 +46,7 @@
 			<p>Lord Peter filled the glasses and sat down.</p>
 			<p>“Carry on,” he said cheerfully; “it sounds interestin’.”</p>
 			<p><abbr>Mrs.</abbr> Ruyslaender took the plunge.</p>
-			<p>“My husband,” she explained, “is Henry Ruyslaender, the diamond merchant. We came over from Kimberley ten years ago, and settled in England. He spends several months in Africa every year on business, and I am expecting him back on the <i epub:type="se:name.vessel.ship">Zambesi</i> to-morrow morning. Now, this is the trouble. Last year he gave me a magnificent diamond necklace of a hundred and fifteen stones⁠—”</p>
+			<p>“My husband,” she explained, “is Henry Ruyslaender, the diamond merchant. We came over from Kimberley ten years ago, and settled in England. He spends several months in Africa every year on business, and I am expecting him back on the <i epub:type="se:name.vessel.ship">Zambesi</i> tomorrow morning. Now, this is the trouble. Last year he gave me a magnificent diamond necklace of a hundred and fifteen stones⁠—”</p>
 			<p>“The Light of Africa⁠—I know,” said Wimsey.</p>
 			<p>She looked a little surprised, but assented. “The necklace has been stolen from me, and I can’t hope to conceal the loss from him. No duplicate would deceive him for an instant.”</p>
 			<p>She paused, and Lord Peter prompted gently:</p>
@@ -97,7 +97,7 @@
 			<p>“You have an engagement to go home early, dear old thing. I’ve specially invited friend Melville to meet the redoubtable Colonel Marchbanks and our greatest criminal lawyer. Which hand am I supposed to be playin’-this from? Oh, yes. Come on, Colonel⁠—you’ve got to hike that old king out some time, why not now?”</p>
 			<p>“It’s a plot.” said <abbr>Mr.</abbr> Arbuthnot, with an exaggerated expression of mystery. “Carry on, don’t mind me.”</p>
 			<p>“I take it you have your own reasons for cultivating the man,” said Sir Impey.</p>
-			<p>“The rest are mine, I fancy. Well, yes, I have. You and the Colonel would really do me a favour by letting Melville cut in to-night.”</p>
+			<p>“The rest are mine, I fancy. Well, yes, I have. You and the Colonel would really do me a favour by letting Melville cut in tonight.”</p>
 			<p>“If you wish it,” growled the Colonel, “but I hope the impudent young beggar won’t presume on the acquaintance.”</p>
 			<p>“I’ll see to that,” said his lordship. “Your cards, Freddy. Who had the ace of hearts? Oh! I had it myself, of course. Our honours.⁠ ⁠… Hullo! Evenin’, Melville.”</p>
 			<p>The ampelopsis was rather a good-looking creature in his own way. Tall and bronzed, with a fine row of very persuasive teeth. He greeted Wimsey and Arbuthnot heartily, the Colonel with a shade too much familiarity, and expressed himself delighted to be introduced to Sir Impey Biggs.</p>
@@ -115,12 +115,12 @@
 			<p>The Colonel proposed a twenty-shilling limit. Melville, with a grimace, amended this to one-tenth of the pool. The amendment was carried and the cards cut, the deal falling to the Colonel.</p>
 			<p>Contrary to his own prophecy, Wimsey began by winning considerably, and grew so garrulously imbecile in the process that even the experienced Melville began to wonder whether this indescribable fatuity was the cloak of ignorance or the mask of the hardened poker-player. Soon, however, he was reassured. The luck came over to his side, and he found himself winning hands down, steadily from Sir Impey and the Colonel, who played cautiously and took little risk⁠—heavily from Wimsey, who appeared reckless and slightly drunk, and was staking foolishly on quite impossible cards.</p>
 			<p>“I never knew such luck as yours, Melville,” said Sir Impey, when that young man had scooped in the proceeds from a handsome straight-flush.</p>
-			<p>“My turn to-night, yours to-morrow,” said Melville, pushing the cards across to Biggs, whose deal it was.</p>
+			<p>“My turn tonight, yours tomorrow,” said Melville, pushing the cards across to Biggs, whose deal it was.</p>
 			<p>Colonel Marchbanks required one card. Wimsey laughed vacantly and demanded an entirely fresh hand; Biggs asked for three; and Melville, after a pause for consideration, took one.</p>
 			<p>It seemed as though everybody had something respectable this time⁠—though Wimsey was not to be depended upon, frequently going the limit upon a pair of jacks in order, as he expressed it, to keep the pot a-boiling. He became peculiarly obstinate now, throwing his chips in with a flushed face, in spite of Melville’s confident air.</p>
 			<p>The Colonel got out, and after a short time Biggs followed his example. Melville held on till the pool mounted to something under a hundred pounds, when Wimsey suddenly turned restive and demanded to see him.</p>
 			<p>“Four kings,” said Melville.</p>
-			<p>“Blast you!” said Lord Peter, laying down four queens. “No holdin’ this feller to-night, is there. Here, take the ruddy cards, Melville, and give somebody else a look in, will you.”</p>
+			<p>“Blast you!” said Lord Peter, laying down four queens. “No holdin’ this feller tonight, is there. Here, take the ruddy cards, Melville, and give somebody else a look in, will you.”</p>
 			<p>He shuffled them as he spoke, and handed them over. Melville dealt, satisfied the demands of the other three players, and was in the act of taking three new cards for himself, when Wimsey gave a sudden exclamation, and shot a swift hand across the table.</p>
 			<p>“Hullo! Melville,” he said, in a chill tone which bore no resemblance to his ordinary speech, “What exactly does this mean?”</p>
 			<p>He lifted Melville’s left arm clear of the table and, with a sharp gesture, shook it. From the sleeve something fluttered to the table and glided away to the floor. Colonel Marchbanks picked it up, and in a dreadful silence laid the joker on the table.</p>
@@ -130,7 +130,7 @@
 			<p>“Come, come,” said Colonel Marchbanks, “no good carryin’ on that way, Melville. Dear me, no good at all. Only makes matters worse. We all saw it, you know. Dear, dear, I don’t know what the Army’s coming to.”</p>
 			<p>“Do you mean you believe it?” shrieked Melville. “For God’s sake, Wimsey, is this a joke or what? Biggs⁠—you’ve got a head on your shoulders⁠—are you going to believe this half-drunk fool and this doddering old idiot who ought to be in his grave?”</p>
 			<p>“That language won’t do you any good, Melville,” said Sir Impey. “I’m afraid we all saw it clearly enough.”</p>
-			<p>“I’ve been suspectin’ this some time, y’ know,” said Wimsey. “That’s why I asked you two to stay to-night. We don’t want to make a public row, but⁠—”</p>
+			<p>“I’ve been suspectin’ this some time, y’ know,” said Wimsey. “That’s why I asked you two to stay tonight. We don’t want to make a public row, but⁠—”</p>
 			<p>“Gentlemen,” said Melville more soberly, “I swear to you that I am absolutely innocent of this ghastly thing. Can’t you believe me?”</p>
 			<p>“I can believe the evidence of my own eyes, sir,” said the colonel, with some heat.</p>
 			<p>“For the good of the club,” said Wimsey, “this couldn’t go on, but⁠—also for the good of the club⁠—I think we should all prefer the matter to be quietly arranged. In the face of what Sir Impey and the Colonel can witness, Melville, I’m afraid your protestations are not likely to be credited.”</p>
@@ -149,7 +149,7 @@
 			<p>“My God!” he cried. “I can see it now. It’s blackmail.”</p>
 			<p>“You may certainly call it blackmail, and theft too,” said Lord Peter, with a shrug. “But why use ugly names? I hold five aces, you see. Better chuck in your hand.”</p>
 			<p>“Suppose I say I never heard of the diamonds?”</p>
-			<p>“It’s a bit late now, isn’t it?” said Wimsey affably. “But, in that case, I’m beastly sorry and all that, of course, but we shall have to make to-night’s business public.”</p>
+			<p>“It’s a bit late now, isn’t it?” said Wimsey affably. “But, in that case, I’m beastly sorry and all that, of course, but we shall have to make tonight’s business public.”</p>
 			<p>“Damn you!” muttered Melville, “you sneering devil.”</p>
 			<p>He showed all his white teeth, half springing, with crouched shoulders. Wimsey waited quietly, his hands in his pockets.</p>
 			<p>The rush did not come. With a furious gesture, Melville pulled out his keys and unlocked his dressing-case.</p>
@@ -165,7 +165,7 @@
 			<p>He picked up the pack which still lay scattered on the table, and shuffled it together.</p>
 			<p>“Catch hold of these, Colonel, and lay ’em out face downwards. That’s right. First of all you cut ’em at the twentieth card⁠—you’ll see the seven of diamonds at the bottom. Correct? Now I’ll call ’em. Ten of hearts, ace of spades, three of clubs, five of clubs, king of diamonds, nine, jack, two of hearts. Right? I could pick ’em all out, you see, except the ace of hearts, and that’s here.”</p>
 			<p>He leaned forward and produced it dexterously from Sir Impey’s breast-pocket.</p>
-			<p>“I learnt it from a man who shared my dug-out near Ypres,” he said. “You needn’t mention to-night’s business, you two. There are crimes which the Law cannot reach.”</p>
+			<p>“I learnt it from a man who shared my dugout near Ypres,” he said. “You needn’t mention tonight’s business, you two. There are crimes which the Law cannot reach.”</p>
 		</article>
 	</body>
 </html>
