--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Fascinating Problem of Uncle Meleager’s Will</h2>
+		<h2 epub:type="title">The Fascinating Problem of Uncle Meleager’s Will</h2>
 		<article id="the-fascinating-problem-of-uncle-meleagers-will" epub:type="se:short-story">
 			<p>“You look a little worried, Bunter,” said his lordship kindly to his manservant. “Is there anything I can do?”</p>
 			<p>The valet’s face brightened as he released his employer’s grey trousers from the press.</p>
