--- a/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
+++ b/src/epub/text/the-piscatorial-farce-of-the-stolen-stomach.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Piscatorial Farce of the Stolen Stomach</h2>
+		<h2 epub:type="title">The Piscatorial Farce of the Stolen Stomach</h2>
 		<article id="the-piscatorial-farce-of-the-stolen-stomach" epub:type="se:short-story">
 			<p>“What in the world,” said Lord Peter Wimsey, “is that?”</p>
 			<p>Thomas Macpherson disengaged the tall jar from its final swathings of paper and straw and set it tenderly upright beside the coffeepot.</p>
