--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Unprincipled Affair of the Practical Joker</h2>
+		<h2 epub:type="title">The Unprincipled Affair of the Practical Joker</h2>
 		<article id="the-unprincipled-affair-of-the-practical-joker" epub:type="se:short-story">
 			<p>The <i epub:type="se:name.vessel.ship">Zambesi</i>, they said, was expected to dock at six in the morning. <abbr>Mrs.</abbr> Ruyslaender booked a bedroom at the Magnifical, with despair in her heart. A bare nine hours and she would be greeting her husband. After that would begin the sickening period of waiting⁠—it might be days, it might be weeks, possibly even months⁠—for the inevitable discovery.</p>
 			<p>The reception-clerk twirled the register towards her. Mechanically, as she signed it, she glanced at the preceding entry:</p>
