--- a/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
+++ b/src/epub/text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Unsolved Puzzle of the Man with No Face</h2>
+		<h2 epub:type="title">The Unsolved Puzzle of the Man with No Face</h2>
 		<article id="the-unsolved-puzzle-of-the-man-with-no-face" epub:type="se:short-story">
 			<p>“And what would <em>you</em> say, sir,” said the stout man, “to this here business of the bloke what’s been found down on the beach at East Felpham?”</p>
 			<p>The rush of travellers after the Bank Holiday had caused an overflow of third-class passengers into the firsts, and the stout man was anxious to seem at ease in his surroundings. The youngish gentleman whom he addressed had obviously paid full fare for a seclusion which he was fated to forgo. He took the matter amiably enough, however, and replied in a courteous tone:</p>
