--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,46 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/the-abominable-history-of-the-man-with-copper-fingers.xhtml">The Abominable History of the Man with Copper Fingers</a>
+				</li>
+				<li>
+					<a href="text/the-entertaining-episode-of-the-article-in-question.xhtml">The Entertaining Episode of the Article in Question</a>
+				</li>
+				<li>
+					<a href="text/the-fascinating-problem-of-uncle-meleagers-will.xhtml">The Fascinating Problem of Uncle Meleager’s Will</a>
+				</li>
+				<li>
+					<a href="text/the-fantastic-horror-of-the-cat-in-the-bag.xhtml">The Fantastic Horror of the Cat in the Bag</a>
+				</li>
+				<li>
+					<a href="text/the-unprincipled-affair-of-the-practical-joker.xhtml">The Unprincipled Affair of the Practical Joker</a>
+				</li>
+				<li>
+					<a href="text/the-undignified-melodrama-of-the-bone-of-contention.xhtml">The Undignified Melodrama of the Bone of Contention</a>
+				</li>
+				<li>
+					<a href="text/the-vindictive-story-of-the-footsteps-that-ran.xhtml">The Vindictive Story of the Footsteps that Ran</a>
+				</li>
+				<li>
+					<a href="text/the-bibulous-business-of-a-matter-of-taste.xhtml">The Bibulous Business of a Matter of Taste</a>
+				</li>
+				<li>
+					<a href="text/the-learned-adventure-of-the-dragons-head.xhtml">The Learned Adventure of the Dragon’s Head</a>
+				</li>
+				<li>
+					<a href="text/the-piscatorial-farce-of-the-stolen-stomach.xhtml">The Piscatorial Farce of the Stolen Stomach</a>
+				</li>
+				<li>
+					<a href="text/the-unsolved-puzzle-of-the-man-with-no-face.xhtml">The Unsolved Puzzle of the Man with No Face</a>
+				</li>
+				<li>
+					<a href="text/the-adventurous-exploit-of-the-cave-of-ali-baba.xhtml">The Adventurous Exploit of the Cave of Ali Baba</a>
+				</li>
+				<li>
+					<a href="text/solution.xhtml">Solution to the Crossword in Uncle Mealager’s Will</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -28,19 +67,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
+					<a href="text/the-abominable-history-of-the-man-with-copper-fingers.xhtml" epub:type="bodymatter">Lord Peter Views the Body</a>
 				</li>
 				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 			</ol>
 		</nav>
