--- a/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
+++ b/src/epub/text/the-bibulous-business-of-a-matter-of-taste.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Bibulous Business of a Matter of Taste</h2>
+		<h2 epub:type="title">The Bibulous Business of a Matter of Taste</h2>
 		<article id="the-bibulous-business-of-a-matter-of-taste" epub:type="se:short-story">
 			<p>“Halte-là!⁠ ⁠… Attention!⁠ ⁠… F⁠⸺⁠e!”</p>
 			<p>The young man in the grey suit pushed his way through the protesting porters and leapt nimbly for the footboard of the guard’s van as the Paris-Evreux express steamed out of the Invalides. The guard, with an eye to a tip, fielded him adroitly from among the detaining hands.</p>
