--- a/src/epub/text/the-fantastic-horror-of-the-cat-in-the-bag.xhtml
+++ b/src/epub/text/the-fantastic-horror-of-the-cat-in-the-bag.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Fantastic Horror of the Cat in the Bag</h2>
+		<h2 epub:type="title">The Fantastic Horror of the Cat in the Bag</h2>
 		<article id="the-fantastic-horror-of-the-cat-in-the-bag" epub:type="se:short-story">
 			<p>The Great North Road wound away like a flat, steel-grey ribbon. Up it, with the sun and wind behind them, two black specks moved swiftly. To the yokel in charge of the hay-wagon they were only two of “they dratted motorcyclists,” as they barked and zoomed past him in rapid succession. A little farther on, a family man, driving delicately with a two-seater sidecar, grinned as the sharp rattle of the o.h.v. Norton was succeeded by the feline shriek of an angry Scott Flying-Squirrel. He, too, in bachelor days, had taken a side in that perennial feud. He sighed regretfully as he watched the racing machines dwindle away northwards.</p>
 			<p>At that abominable and unexpected S-bend across the bridge above Hatfield, the Norton man, in the pride of his heart, turned to wave a defiant hand at his pursuer. In that second, the enormous bulk of a loaded charabanc loomed down upon him from the bridgehead. He wrenched himself away from it in a fierce wobble, and the Scott, cornering melodramatically, with left and right footrests alternately skimming the tarmac, gained a few triumphant yards. The Norton leapt forward with wide-open throttle. A party of children, seized with sdden panic, rushed helter-skelter across the road. The Scott lurched through them in drunken swerves. The road was clear, and the chase settled down once more.</p>
