--- a/src/epub/text/the-learned-adventure-of-the-dragons-head.xhtml
+++ b/src/epub/text/the-learned-adventure-of-the-dragons-head.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Learned Adventure of the Dragon’s Head</h2>
+		<h2 epub:type="title">The Learned Adventure of the Dragon’s Head</h2>
 		<article id="the-learned-adventure-of-the-dragons-head" epub:type="se:short-story">
 			<p>“Uncle Peter!”</p>
 			<p>“Half a jiff, Gherkins. No, I don’t think I’ll take the Catullus, <abbr>Mr.</abbr> Ffolliott. After all, thirteen guineas is a bit steep without either the title or the last folio, what? But you might send me round the Vitruvius and the Satyricon when they come in; I’d like to have a look at them, anyhow. Well, old man, what is it?”</p>
