--- a/src/epub/text/the-undignified-melodrama-of-the-bone-of-contention.xhtml
+++ b/src/epub/text/the-undignified-melodrama-of-the-bone-of-contention.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Undignified Melodrama of the Bone of Contention</h2>
+		<h2 epub:type="title">The Undignified Melodrama of the Bone of Contention</h2>
 		<article id="the-undignified-melodrama-of-the-bone-of-contention" epub:type="se:short-story">
 			<p>“I am afraid you have brought shocking weather with you, Lord Peter,” said <abbr>Mrs.</abbr> Frobisher-Pym, with playful reproof. “If it goes on like this they will have a bad day for the funeral.”</p>
 			<p>Lord Peter Wimsey glanced out of the morning-room window to the soaked green lawn and the shrubbery, where the rain streamed down remorselessly over the laurel leaves, stiff and shiny like mackintoshes.</p>
