--- a/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
+++ b/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
@@ -6,7 +6,7 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<h2>The Vindictive Story of the Footsteps that Ran</h2>
+		<h2 epub:type="title">The Vindictive Story of the Footsteps that Ran</h2>
 		<article id="the-vindictive-story-of-the-footsteps-that-ran" epub:type="se:short-story">
 			<p><abbr>Mr.</abbr> Bunter withdrew his head from beneath the focusing cloth.</p>
 			<p>“I fancy that will be quite adequate, sir,” he said deferentially, “unless there are any further patients, if I may call them so, which you would wish put on record.”</p>
