[Editorial] Fix typos

--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -26,7 +26,7 @@
 			<p>“Did you ring, my lord?” he demanded of Lord Peter’s head, alone visible.</p>
 			<p>“Yes,” said his lordship abruptly; “Ambsace.”</p>
 			<p>“I beg your lordship’s pardon?”</p>
-			<p>“Ambsace. Word of seven letters. Meaning two. With S in the middle. Two aces. Absace.”</p>
+			<p>“Ambsace. Word of seven letters. Meaning two. With S in the middle. Two aces. Ambsace.”</p>
 			<p>Bunter’s expression became beatified.</p>
 			<p>“Undoubtedly correct,” he said, pulling a small sheet of paper from his pocket, and entering the word upon it in pencil. “I am extremely obliged to your lordship. In that case the ‘indifferent cook in six letters ending with <em>red</em>’ must be Alfred.”</p>
 			<p>Lord Peter waved a dismissive hand.</p>
@@ -60,7 +60,7 @@
 			<p>“Yes⁠—well, that’s where he’s been so clever. Unless she finds the new will, the old will comes into force and hands over every penny of the money to the funds of the Primrose League.”</p>
 			<p>Lord Peter gave a little yelp of joy.</p>
 			<p>“Good for Uncle Meleager! But, look here, Polly, I’m a Tory, if anything. I’m certainly not a Red. Why should I help to snatch the good gold from the Primrose Leaguers and hand it over to the Third International? Uncle Meleager’s a sport. I take to Uncle Meleager.”</p>
-			<p>“Oh, but Peter, I really don’t think she’ll do that with it. Not at present, anyway. They’re awfully poor, and her mother ought to have some frghtfully difficult operation or something, and go and live abroad, so it really is ever so important they should get the money. And perhaps Hannah wouldn’t be quite so Red if she’d ever had a bean of her own. Besides, you could make it a condition of helping her that she should go and get properly shingled at Bresil’s.”</p>
+			<p>“Oh, but Peter, I really don’t think she’ll do that with it. Not at present, anyway. They’re awfully poor, and her mother ought to have some frightfully difficult operation or something, and go and live abroad, so it really is ever so important they should get the money. And perhaps Hannah wouldn’t be quite so Red if she’d ever had a bean of her own. Besides, you could make it a condition of helping her that she should go and get properly shingled at Bresil’s.”</p>
 			<p>“You are a very cynically-minded person,” said his lordship. “However, it would be fun to have a go at Uncle M. Was he obliging enough to give any clues for finding the will?”</p>
 			<p>“He wrote a funny sort of letter, which we can’t make head or tail of. Come to the club tonight and she’ll show it to you.”</p>
 			<p>“Right-ho! Seven o’clock do? And we could go on and see a show afterwards. Do you mind clearing out now? I’m going to get dressed.”</p>
@@ -112,7 +112,7 @@
 			<p>“That’s not a very classic design,” he observed.</p>
 			<p>“No. Uncle Meleager used to complain about it and say he must have it altered. There was a proper one once, I believe, but it got damaged, and the man before Uncle Meleager had it replaced by some local idiot. He built three bay windows out of the dining-room at the same time, which made it very much lighter and pleasanter, of course, but it looks awful. Now, this tiling is all right; uncle put that in himself.”</p>
 			<p>She pointed to a mosaic dog at the threshold, with the motto, “Cave canem,” and Lord Peter recognised it as a copy of a Pompeian original.</p>
-			<p>A narrow star brought them to the “attic,” where the Wimseys flung themselves with enthusiasm upon a huge heap of dusty old newspapers and manuscripts. The latter seemed the likelier field, so they started with them. They consisted of a quantity of crosswords in manuscript⁠—presumably the children of Uncle Meleager’s own brain. The square, the list of definitions, and the solution were in every case neatly pinned together. Some (early efforts, no doubt) were childishly simple, but others were difficult, with allusive or punning clues; some of the ordinary newspaper type, others in the form of rhymed distichs. They scrutinised the solutions closely, and searched the definitions for acrostics or hidden words, unsuccessfully for a long time.</p>
+			<p>A narrow stair brought them to the “attic,” where the Wimseys flung themselves with enthusiasm upon a huge heap of dusty old newspapers and manuscripts. The latter seemed the likelier field, so they started with them. They consisted of a quantity of crosswords in manuscript⁠—presumably the children of Uncle Meleager’s own brain. The square, the list of definitions, and the solution were in every case neatly pinned together. Some (early efforts, no doubt) were childishly simple, but others were difficult, with allusive or punning clues; some of the ordinary newspaper type, others in the form of rhymed distichs. They scrutinised the solutions closely, and searched the definitions for acrostics or hidden words, unsuccessfully for a long time.</p>
 			<p>“This one’s a funny one,” said Mary, “nothing seems to fit. Oh! it’s two pinned together. No, it isn’t⁠—yes, it is⁠—it’s only been pinned up wrong. Peter, have you seen the puzzle belonging to these clues anywhere?”</p>
 			<p>“What one’s that?”</p>
 			<p>“Well, it’s numbered rather funnily, with Roman and Arabic numerals, and it starts off with a thing that hasn’t got any numbers at all:</p>
@@ -200,7 +200,7 @@
 			<p>The way of wisdom, wise men say.</p>
 			<p>Grew long ago by river’s edge Where grows today the common sedge.</p>
 			<p>One of three by which, they say,</p>
-			<p>You’ll know the Comishmen alway.</p>
+			<p>You’ll know the Cornishmen alway.</p>
 			<p>Blow upon blow; five more the vanquished Roman shows;</p>
 			<p>And if the foot slip one, on crippled feet one goes.</p>
 			<p>By this Jew’s work the whole we find.</p>
