--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -12,14 +12,14 @@
 			<p>The reception-clerk twirled the register towards her. Mechanically, as she signed it, she glanced at the preceding entry:</p>
 			<p>“Lord Peter Wimsey and valet⁠—London⁠—Suite 24.”</p>
 			<p><abbr>Mrs.</abbr> Ruyslaender’s heart seemed to stop for a second. Was it possible that, even now, God had left a loophole? She expected little from Him⁠—all her life He had shown Himself a sufficiently stern creditor. It was fantastic to base the frailest hope on this signature of a man she had never even seen.</p>
-			<p>Yet the name remained in her mind while she dined in her own room. She dismissed her maid presently, and sat for a long time looking at her own haggard reflection in the mirror. Twice she rose and went to the door⁠—then tuned back, calling herself a fool. The third time she turned the handle quickly and hurried down the corridor, without giving herself time to think.</p>
+			<p>Yet the name remained in her mind while she dined in her own room. She dismissed her maid presently, and sat for a long time looking at her own haggard reflection in the mirror. Twice she rose and went to the door⁠—then turned back, calling herself a fool. The third time she turned the handle quickly and hurried down the corridor, without giving herself time to think.</p>
 			<p>A large golden arrow at the corner directed her to Suite 24. It was 11 o’clock, and nobody was within view. <abbr>Mrs.</abbr> Ruyslaender gave a sharp knock on Lord Peter Wimsey’s door and stood back, waiting, with the sort of desperate relief one experiences after hearing a dangerous’ letter thump the bottom of the pillar-box. Whatever the adventure, she was committed to it.</p>
 			<p>The manservant was of the imperturbable sort. He neither invited nor rejected, but stood respectfully upon the threshold.</p>
 			<p>“Lord Peter Wimsey?” murmured <abbr>Mrs.</abbr> Ruyslaender.</p>
 			<p>“Yes, madam.”</p>
 			<p>“Could I speak to him for a moment?”</p>
 			<p>“His lordship has just retired, madam. If you will step in, I will enquire.”</p>
-			<p><abbr>Mrs.</abbr> Ruyslaender following him into one of those palatial sitting-rooms which the Magnifical provides for the wealthy pilgrim.</p>
+			<p><abbr>Mrs.</abbr> Ruyslaender followed him into one of those palatial sitting-rooms which the Magnifical provides for the wealthy pilgrim.</p>
 			<p>“Will you take a seat, madam?”</p>
 			<p>The man stepped noiselessly to the bedroom door and passed in, shutting it behind him. The lock, however, failed to catch, and <abbr>Mrs.</abbr> Ruyslaender caught the conversation.</p>
 			<p>“Pardon me, my lord, a lady has called. She mentioned no appointment, so I considered it better to acquaint your lordship.”</p>
@@ -56,7 +56,7 @@
 			<p>“There is a man we both know slightly⁠—a man called Paul Melville.”</p>
 			<p>Lord Peter’s eyes narrowed. “M’m, yes, I fancy I’ve seen him about the clubs. New Army, but transferred himself into the Regulars. Dark. Showy. Bit of an ampelopsis, what?”</p>
 			<p>“Ampelopsis?”</p>
-			<p>“Surburban plant that climbs by suction. <em>You</em> know⁠—first year, tender little shoots⁠—second year, fine show⁠—next year, all over the shop. Now tell me I am rude.”</p>
+			<p>“Suburban plant that climbs by suction. <em>You</em> know⁠—first year, tender little shoots⁠—second year, fine show⁠—next year, all over the shop. Now tell me I am rude.”</p>
 			<p><abbr>Mrs.</abbr> Ruyslaender giggled. “Now you mention it, he is <em>exactly</em> like an ampelopsis. What a relief to be able to think of him as that.⁠ ⁠… Well, he is some sort of distant relation of my husband’s. He called one evening when I was alone. We talked about jewels, and I brought down my jewel-box and showed him the Light of Africa. He knows a good deal about stones. I was in and out of the room two or three times, but didn’t think to lock up the box. After he left, I was putting the things away, and I opened the jeweller’s case the diamonds were in⁠—and they had gone!”</p>
 			<p>“H’m⁠—pretty barefaced. Look here, <abbr>Mrs.</abbr> Ruyslaender, you agree he’s an ampelopsis, but you won’t call in the police. Honestly, now⁠—forgive me; you’re askin’ my advice, you know⁠—is he worth botherin’ about?”</p>
 			<p>“It’s not that,” said the woman, in a low tone. “Oh, no! But he took something else as well. He took⁠—a portrait⁠—a small painting set with diamonds.”</p>
