--- a/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
+++ b/src/epub/text/the-vindictive-story-of-the-footsteps-that-ran.xhtml
@@ -10,7 +10,7 @@
 		<article id="the-vindictive-story-of-the-footsteps-that-ran" epub:type="se:short-story">
 			<p><abbr>Mr.</abbr> Bunter withdrew his head from beneath the focusing cloth.</p>
 			<p>“I fancy that will be quite adequate, sir,” he said deferentially, “unless there are any further patients, if I may call them so, which you would wish put on record.”</p>
-			<p>“Not today,” replied the doctor. He took the last stricken rat gently from the table, and replaced it on its cage with an air of satisfaction. “Perhaps on Wednesday, if Lord Peter can kindly spare your services once again⁠—”</p>
+			<p>“Not today,” replied the doctor. He took the last stricken rat gently from the table, and replaced it in its cage with an air of satisfaction. “Perhaps on Wednesday, if Lord Peter can kindly spare your services once again⁠—”</p>
 			<p>“What’s that?” murmured his lordship, withdrawing his long nose from the investigation of a number of unattractive-looking glass jars. “Nice old dog,” he added vaguely. “Wags his tail when you mention his name, what? Are these monkey-glands, Hartman, or a southwest elevation of Cleopatra’s duodenum?”</p>
 			<p>“You don’t know anything, do you?” said the young physician, laughing. “No use playing your bally-fool-with-an-eyeglass tricks on me, Wimsey. I’m up to them. I was saying to Bunter that I’d be no end grateful if you’d let him turn up again three days hence to register the progress of the specimens⁠—always supposing they do progress, that is.”</p>
 			<p>“Why ask, dear old thing?” said his lordship. “Always a pleasure to assist a fellow-sleuth, don’t you know. Trackin’ down murderers⁠—all in the same way of business and all that. All finished? Good egg! By the way, if you don’t have that cage mended you’ll lose one of your patients⁠—Number 5. The last wire but one is workin’ loose⁠—assisted by the intelligent occupant. Jolly little beasts, ain’t they? No need of dentists⁠—wish I was a rat⁠—wire much better for the nerves than that fizzlin’ drill.”</p>
@@ -19,7 +19,7 @@
 			<p>“Built noticin’⁠—improved by practice,” said Lord Peter quietly. “Anythin’ wrong leaves a kind of impression on the eye; brain trots along afterwards with the warnin’. I saw that when we came in. Only just grasped it. Can’t say my mind was glued on the matter. Shows the victim’s improvin’, anyhow. All serene, Bunter?”</p>
 			<p>“Everything perfectly satisfactory, I trust, my lord,” replied the manservant. He had packed up his camera and plates, and was quietly restoring order in the little laboratory, whose fittings⁠—compact as those of an ocean liner⁠—had been disarranged for the experiment.</p>
 			<p>“Well,” said the doctor, “I am enormously obliged to you, Lord Peter, and to Bunter too. I am hoping for a great result from these experiments, and you cannot imagine how valuable an assistance it will be to me to have a really good series of photographs. I can’t afford this sort of thing⁠—yet,” he added, his rather haggard young face wistful as he looked at the great camera, “and I can’t do the work at the hospital. There’s no time; I’ve got to be here. A struggling G.P. can’t afford to let his practice go, even in Bloomsbury. There are times when even a half-crown visit makes all the difference between making both ends meet and having an ugly hiatus.”</p>
-			<p>“As <abbr>Mr.</abbr> Micawber said,” replied Wimsey, “ ‘Income twenty pounds, expenditure nineteen, nineteen, six⁠—result: happiness; expenditure twenty pounds, ought, six⁠—result: misery.’ Don’t prostrate yourself in gratitude, old bean; nothin’ Bunter loves like messin’ round with pyro and hyposulphite. Keeps his hand in. All kinds of practice welcome. Finger-paints and process plates spell seventh what-you-may-call-it of bliss, but focal-plane work on scurvy-ridden rodents (good phrase!) acceptable if no crime forthcoming. Crimes have been rather short lately. Been eatin’ our heads off, haven’t we, Bunter? Don’t know what’s come over London. I’ve taken to prying into my neighbour’s affairs to keep from goin’ stale. Frightened the postman into a fit the other day by askin’ him how his young lady at Croydon was. He’s a married man, livin’ in Great Ormond Street.”</p>
+			<p>“As <abbr>Mr.</abbr> Micawber said,” replied Wimsey, “ ‘Income twenty pounds, expenditure nineteen, nineteen, six⁠—result: happiness; expenditure twenty pounds, ought, six⁠—result: misery.’ Don’t prostrate yourself in gratitude, old bean; nothin’ Bunter loves like messin’ round with pyro and hyposulphite. Keeps his hand in. All kinds of practice welcome. Finger-prints and process plates spell seventh what-you-may-call-it of bliss, but focal-plane work on scurvy-ridden rodents (good phrase!) acceptable if no crime forthcoming. Crimes have been rather short lately. Been eatin’ our heads off, haven’t we, Bunter? Don’t know what’s come over London. I’ve taken to prying into my neighbour’s affairs to keep from goin’ stale. Frightened the postman into a fit the other day by askin’ him how his young lady at Croydon was. He’s a married man, livin’ in Great Ormond Street.”</p>
 			<p>“How did you know?”</p>
 			<p>“Well, I didn’t really. But he lives just opposite to a friend of mine⁠—Inspector Parker; and his wife⁠—not Parker’s; he’s unmarried; the postman’s, I mean⁠—asked Parker the other day whether the flyin’ shows at Croydon went on all night. Parker, bein’ flummoxed, said ‘No,’ without thinkin’. Bit of a giveaway, what? Thought I’d give the poor devil a word in season, don’t you know. Uncommonly thoughtless of Parker.”</p>
 			<p>The doctor laughed. “You’ll stay to lunch, won’t you?” he said. “Only cold meat and salad, I’m afraid. My woman won’t come Sundays. Have to answer my own door. Deuced unprofessional, I’m afraid, but it can’t be helped.”</p>
@@ -83,7 +83,7 @@
 			<p>“My laboratory,” said the doctor. “Heavens! to think that while we were there at dinner this murdering villain⁠—”</p>
 			<p>“Quite so, sir,” agreed the constable. “Well, he’d get away over the wall into the court be’ind. ’E’ll ’ave been seen there, no fear; you needn’t anticipate much trouble in layin’ ’ands on ’im, sir. I’ll go round there in ’arf a tick. Now then, sir”⁠—turning to Brotherton⁠—“ ’ave you any idea wot this party might have looked like?”</p>
 			<p>Brotherton lifted a wild face, and the doctor interposed.</p>
-			<p>“I think you ought to know, constable,” he said, “that there was⁠—well, not a murderous attack, but what might have been one, made on this woman before⁠—about eight weeks ago⁠—by a man named Marincetti⁠—an Italian waiter⁠—with a knife.”</p>
+			<p>“I think you ought to know, constable,” he said, “that there was⁠—well, not a murderous attack, but what might have been one, made on this woman before⁠—about eight weeks ago⁠—by a man named Marinetti⁠—an Italian waiter⁠—with a knife.”</p>
 			<p>“Ah!” The policeman licked his pencil eagerly. “Do you know this party as ’as been mentioned?” he enquired of Brotherton.</p>
 			<p>“That’s the man,” said Brotherton, with concentrated fury. “Coming here after my wife⁠—God curse him! I wish to God I had him dead here beside her!”</p>
 			<p>“Quite so,” said the policeman. “Now, sir”⁠—to the doctor⁠—“ ’ave you got the weapon wot the crime was committed with?”</p>
@@ -130,7 +130,7 @@
 			<p>“But there is no mystery.”</p>
 			<p>“There are twenty mysteries. For one thing, when was the window-cleaner here last?”</p>
 			<p>“The window-cleaner?”</p>
-			<p>“Who shall fathom the ebony-black enigma of the window-cleaner?” pursued Peter lightly, putting a match to his pipe. “You are quietly in your bath, in a state of more or less innocent nature, when an untrusive head appears at the window, like the ghost of Hamilton Tighe, and a gruff voice, suspended between earth and heaven, says ‘Good morning, sir.’ Where do window-cleaners go between visits? Do they hibernate, like busy bees? Do they⁠—?”</p>
+			<p>“Who shall fathom the ebony-black enigma of the window-cleaner?” pursued Peter lightly, putting a match to his pipe. “You are quietly in your bath, in a state of more or less innocent nature, when an intrusive head appears at the window, like the ghost of Hamilton Tighe, and a gruff voice, suspended between earth and heaven, says ‘Good morning, sir.’ Where do window-cleaners go between visits? Do they hibernate, like busy bees? Do they⁠—?”</p>
 			<p>“Really, Lord Peter,” said the doctor, “don’t you think you’re going a bit beyond the limit?”</p>
 			<p>“Sorry you feel like that,” said Peter, “but I really want to know about the window-cleaner. Look how clear these panes are.”</p>
 			<p>“He came yesterday, if you want to know,” said <abbr>Dr.</abbr> Hartman, rather stiffly.</p>
@@ -144,7 +144,7 @@
 			<p>“My lord?” <abbr>Mr.</abbr> Bunter unobtrusively appeared, as he had unobtrusively stolen out to keep an unobtrusive eye upon the patient.</p>
 			<p>“Good,” said Wimsey. “Stay where you are.” His lackadaisical manner had gone, and he looked at the doctor as four years previously he might have looked at a refractory subaltern.</p>
 			<p>“<abbr>Dr.</abbr> Hartman,” he said, “something is wrong. Cast your mind back. We were talking about symptoms. Then came the scream. Then came the sound of feet running. <em>Which direction did they run in?</em>”</p>
-			<p>“I’m sure I don’t now.”</p>
+			<p>“I’m sure I don’t know.”</p>
 			<p>“Don’t you? Symptomatic, though, doctor. They have been troubling me all the time, subconsciously. Now I know why. They ran <em>from the kitchen</em>.”</p>
 			<p>“Well?”</p>
 			<p>“Well! And now the window-cleaner⁠—”</p>
@@ -172,7 +172,7 @@
 			<p>“Ah!”</p>
 			<p>“Drippin’⁠—! Yes, there was⁠—”</p>
 			<p>“Something unsatisfactory, my lord⁠—”</p>
-			<p>“About the drippin’! Oh, my head! What’s that they say in <i epub:type="se:name.publication.play">Dear Brutus</i>, Bunter? ‘Hold on to the workbox.’ That’s right. Hold on to the drippin’. Beastly slimy stuff to hold on too⁠—Wait!”</p>
+			<p>“About the drippin’! Oh, my head! What’s that they say in <i epub:type="se:name.publication.play">Dear Brutus</i>, Bunter? ‘Hold on to the workbox.’ That’s right. Hold on to the drippin’. Beastly slimy stuff to hold on to⁠—Wait!”</p>
 			<p>There was a pause.</p>
 			<p>“When I was a kid,” said Wimsey, “I used to love to go down into the kitchen and talk to old cookie. Good old soul she was, too. I can see her now, gettin’ chicken ready, with me danglin’ my legs on the table. <em>She</em> used to pluck an’ draw ’em herself. I revelled in it. Little beasts boys are, ain’t they, Bunter? Pluck it, draw it, wash it, stuff it, tuck its little tail through its little what-you-may-call-it, truss it, grease the dish-Bunter?”</p>
 			<p>“My lord!”</p>
@@ -189,7 +189,7 @@
 			<p>“Yes, why? That’s the point. One more mental association with the bird. It’s just coming. Wait a moment. Pluck, draw, wash, stuff, tuck up, truss⁠—By God!”</p>
 			<p>“My lord?”</p>
 			<p>“Come on, Bunter. Thank Heaven we turned off the gas!”</p>
-			<p>He dashed through the bedroom, disregarding the doctor and the patient, who sat up with a smothered shriek. He flung open the oven door and snatched out the baking-tin. The skin of the bird had just begun to discolour. With a little gasp of triumph, Wimsey caugh the iron ring that protruded from the wing, and jerked out⁠—the six-inch spiral skewer.</p>
+			<p>He dashed through the bedroom, disregarding the doctor and the patient, who sat up with a smothered shriek. He flung open the oven door and snatched out the baking-tin. The skin of the bird had just begun to discolour. With a little gasp of triumph, Wimsey caught the iron ring that protruded from the wing, and jerked out⁠—the six-inch spiral skewer.</p>
 			<p>The doctor was struggling with the excited Brotherton in the doorway. Wimsey caught the man as he broke away, and shook him into the corner with a jiujitsu twist.</p>
 			<p>“Here is the weapon,” he said.</p>
 			<p>“Prove it, blast you!” said Brotherton savagely.</p>
@@ -197,7 +197,7 @@
 			<hr/>
 			<p>In the laboratory the doctor bent over the microscope. A thin layer of blood from the skewer had been spread upon the slide.</p>
 			<p>“Well?” said Wimsey impatiently.</p>
-			<p>“It’s all right,” said Hartman. “The roasting didn’t get anywhere near the middle. My God, Wimsey, yes, you’re right⁠—round corpuscles, diameter ¹⁄₃₆₂₁⁠—mamalian blood⁠—probably human⁠—”</p>
+			<p>“It’s all right,” said Hartman. “The roasting didn’t get anywhere near the middle. My God, Wimsey, yes, you’re right⁠—round corpuscles, diameter ¹⁄₃₆₂₁⁠—mammalian blood⁠—probably human⁠—”</p>
 			<p>“Her blood,” said Wimsey.</p>
 			<hr/>
 			<p>“It was very clever, Bunter,” said Lord Peter, as the taxi trundled along the way to his flat in Piccadilly. “If that fowl had gone on roasting a bit longer the blood-corpuscles might easily have been destroyed beyond all hope of recognition. It all goes to show that the unpremeditated crime is usually the safest.”</p>
