--- a/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
+++ b/src/epub/text/the-fascinating-problem-of-uncle-meleagers-will.xhtml
@@ -1310,7 +1310,7 @@
 			<p>“Your lordship will excuse me,” he said firmly, “but your lordship’s face is all over charcoal.”</p>
 			<p>“Black but comely,” said Lord Peter, “but I submit to your reproof. How clever we’ve all been. How topping everything is. How rich you are going to be. How late it is and how hungry I am. Yes, Bunter, I will wash my face. Is there anything else I can do for anybody while I feel in the mood?”</p>
 			<p>“If your lordship would be so kind,” said <abbr>Mr.</abbr> Bunter, producing a small paper from his pocket, “I should be grateful if you could favour me with a South African quadruped in six letters, beginning with Q.”</p>
-			<p><b>Note</b>.—<i>The solution of the crossword will be found at the end of the book. (p. 255).</i></p>
+				<p><b>Note</b>.—<i>The solution of the crossword will be found at the end of the book <a href="solution.xhtml">here</a>.</i></p>
 		</article>
 	</body>
 </html>
