Changes on proof-reading story 5

--- a/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
+++ b/src/epub/text/the-unprincipled-affair-of-the-practical-joker.xhtml
@@ -10,10 +10,12 @@
 		<article id="the-unprincipled-affair-of-the-practical-joker" epub:type="se:short-story">
 			<p>The <i epub:type="se:name.vessel.ship">Zambesi</i>, they said, was expected to dock at six in the morning. <abbr>Mrs.</abbr> Ruyslaender booked a bedroom at the Magnifical, with despair in her heart. A bare nine hours and she would be greeting her husband. After that would begin the sickening period of waiting⁠—it might be days, it might be weeks, possibly even months⁠—for the inevitable discovery.</p>
 			<p>The reception-clerk twirled the register towards her. Mechanically, as she signed it, she glanced at the preceding entry:</p>
+			<blockquote>
 			<p>“Lord Peter Wimsey and valet⁠—London⁠—Suite 24.”</p>
+</blockquote>
 			<p><abbr>Mrs.</abbr> Ruyslaender’s heart seemed to stop for a second. Was it possible that, even now, God had left a loophole? She expected little from Him⁠—all her life He had shown Himself a sufficiently stern creditor. It was fantastic to base the frailest hope on this signature of a man she had never even seen.</p>
 			<p>Yet the name remained in her mind while she dined in her own room. She dismissed her maid presently, and sat for a long time looking at her own haggard reflection in the mirror. Twice she rose and went to the door⁠—then turned back, calling herself a fool. The third time she turned the handle quickly and hurried down the corridor, without giving herself time to think.</p>
-			<p>A large golden arrow at the corner directed her to Suite 24. It was 11 o’clock, and nobody was within view. <abbr>Mrs.</abbr> Ruyslaender gave a sharp knock on Lord Peter Wimsey’s door and stood back, waiting, with the sort of desperate relief one experiences after hearing a dangerous’ letter thump the bottom of the pillar-box. Whatever the adventure, she was committed to it.</p>
+			<p>A large golden arrow at the corner directed her to Suite 24. It was 11 o’clock, and nobody was within view. <abbr>Mrs.</abbr> Ruyslaender gave a sharp knock on Lord Peter Wimsey’s door and stood back, waiting, with the sort of desperate relief one experiences after hearing a dangerous letter thump the bottom of the pillar-box. Whatever the adventure, she was committed to it.</p>
 			<p>The manservant was of the imperturbable sort. He neither invited nor rejected, but stood respectfully upon the threshold.</p>
 			<p>“Lord Peter Wimsey?” murmured <abbr>Mrs.</abbr> Ruyslaender.</p>
 			<p>“Yes, madam.”</p>
@@ -158,7 +160,7 @@
 			<p>“Well, good night, Melville⁠—and thanks for a pleasant game.”</p>
 			<hr/>
 			<p>“I say, Biggs,” said Wimsey, when he had returned to the card-room. “You’ve had a lot of experience. What tactics d’you think one’s justified in usin’ with a blackmailer?”</p>
-			<p>“Ah!” said the K.C. “There you’ve put your finger on Society’s sore place, where the Law is helpless. Speaking as a man, I’d say nothing could be too bad for the brute. It’s a crime crueller and infinitely worse in its results than murder. As a lawyer, I can only say that I have consistently refused to defend a blackmailer or to prosecute any poor devil who does away with his tormentor.”</p>
+			<p>“Ah!” said the <abbr class="eoc" epub:type="z3998:initialism">K.C.</abbr> “There you’ve put your finger on Society’s sore place, where the Law is helpless. Speaking as a man, I’d say nothing could be too bad for the brute. It’s a crime crueller and infinitely worse in its results than murder. As a lawyer, I can only say that I have consistently refused to defend a blackmailer or to prosecute any poor devil who does away with his tormentor.”</p>
 			<p>“H’m,” replied Wimsey. “What do you say, Colonel?”</p>
 			<p>“A man like that’s a filthy pest,” said the little warrior stoutly. “Shootin’s too good for him. I knew a man⁠—close personal friend, in fact⁠—hounded to death⁠—blew his brains out⁠—one of the best. Don’t like to talk about it.”</p>
 			<p>“I want to show you something,” said Wimsey.</p>
